@startuml
class App{

}

class Website{
- siteName
- siteAuthor
+makeHTML()
}

class FolderManager{
+makeWebsiteFolder()
+makeJSFolder()
+makeCSSFolder()
+printFolderStatus()
}

class UserInput{
+getSiteName()
+getAuthor()
+askJSFiles()
+askCSSFiles()
}

App o-- UserInput
App o-- FolderManager
App o-- Website
@enduml